// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListenCard renders correctly 1`] = `
<ListenCard
  listen={
    Object {
      "listened_at": 0,
      "playing_now": false,
      "track_metadata": Object {
        "additional_info": Object {
          "artist_mbids": Array [
            "xxxx",
          ],
          "duration_ms": 123000,
          "recording_mbid": "yyyy",
          "recording_msid": "bar",
          "release_mbid": "foo",
        },
        "artist_name": "Moondog",
        "track_name": "Bird's Lament",
      },
      "user_name": "test",
    }
  }
  showTimestamp={true}
  showUsername={true}
>
  <ForwardRef
    className="listen-card   "
    onDoubleClick={[Function]}
  >
    <div
      className="card listen-card   "
      onDoubleClick={[Function]}
    >
      <div
        className="main-content"
      >
        <a
          className="listen-thumbnail"
          href="https://musicbrainz.org/release/foo/cover-art"
          rel="noopener noreferrer"
          target="_blank"
          title="Add cover art in MusicBrainz"
        >
          <div
            className="add-cover-art"
          >
            <img
              alt="Add cover art in MusicBrainz"
              src="/static/img/add-cover-art.svg"
            />
          </div>
        </a>
        <div
          className="listen-details"
        >
          <div
            className="title-duration"
          >
            <div
              className="ellipsis-2-lines"
              title="Bird's Lament"
            >
              <a
                href="https://musicbrainz.org/recording/yyyy"
                rel="noopener noreferrer"
                target="_blank"
              >
                Bird's Lament
              </a>
            </div>
            <div
              className="small text-muted"
              title="Duration"
            >
              2:03
            </div>
          </div>
          <div
            className="small text-muted ellipsis"
            title="Moondog"
          >
            <a
              href="https://musicbrainz.org/artist/xxxx"
              rel="noopener noreferrer"
              target="_blank"
            >
              Moondog
            </a>
          </div>
        </div>
        <div
          className="right-section"
        >
          <div
            className="username-and-timestamp"
          >
            <a
              href="/user/test"
              rel="noopener noreferrer"
              target="_blank"
              title="test"
            >
              test
            </a>
            <span
              className="listen-time"
              title=""
            >
              Jan 01, 1970, 1:00 AM
            </span>
          </div>
          <div
            className="listen-controls"
          >
            <FontAwesomeIcon
              aria-expanded="true"
              aria-haspopup="true"
              beat={false}
              beatFade={false}
              border={false}
              bounce={false}
              className="dropdown-toggle"
              data-toggle="dropdown"
              fade={false}
              fixedWidth={false}
              flip={false}
              icon={
                Object {
                  "icon": Array [
                    128,
                    512,
                    Array [
                      "ellipsis-v",
                    ],
                    "f142",
                    "M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z",
                  ],
                  "iconName": "ellipsis-vertical",
                  "prefix": "fas",
                }
              }
              id="listenControlsDropdown"
              inverse={false}
              listItem={false}
              mask={null}
              maskId={null}
              pull={null}
              pulse={false}
              rotation={null}
              shake={false}
              size={null}
              spin={false}
              spinPulse={false}
              spinReverse={false}
              swapOpacity={false}
              symbol={false}
              title="More actions"
              titleId={null}
              transform={null}
            >
              <svg
                aria-expanded="true"
                aria-haspopup="true"
                aria-labelledby="svg-inline--fa-title-000000000000"
                className="svg-inline--fa fa-ellipsis-vertical dropdown-toggle"
                data-icon="ellipsis-vertical"
                data-prefix="fas"
                data-toggle="dropdown"
                id="listenControlsDropdown"
                role="img"
                style={Object {}}
                viewBox="0 0 128 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-000000000000"
                  style={Object {}}
                >
                  More actions
                </title>
                <path
                  d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
            <ul
              aria-labelledby="listenControlsDropdown"
              className="dropdown-menu dropdown-menu-right"
            >
              <ListenControl
                anchorTagAttributes={
                  Object {
                    "rel": "noopener noreferrer",
                    "target": "_blank",
                  }
                }
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [
                        "external-link-alt",
                      ],
                      "f35d",
                      "M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V32c0-17.7-14.3-32-32-32H352zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z",
                    ],
                    "iconName": "up-right-from-square",
                    "prefix": "fas",
                  }
                }
                link="https://musicbrainz.org/recording/yyyy"
                text="Open in MusicBrainz"
                title="Open in MusicBrainz"
              >
                <a
                  aria-label="Open in MusicBrainz"
                  href="https://musicbrainz.org/recording/yyyy"
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Open in MusicBrainz"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [
                            "external-link-alt",
                          ],
                          "f35d",
                          "M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V32c0-17.7-14.3-32-32-32H352zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z",
                        ],
                        "iconName": "up-right-from-square",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-up-right-from-square "
                      data-icon="up-right-from-square"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V32c0-17.7-14.3-32-32-32H352zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Open in MusicBrainz
                </a>
              </ListenControl>
              <ListenControl
                action={[Function]}
                dataTarget="#ListenPayloadModal"
                dataToggle="modal"
                icon={
                  Object {
                    "icon": Array [
                      640,
                      512,
                      Array [],
                      "f121",
                      "M392.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm80.6 120.1c-12.5 12.5-12.5 32.8 0 45.3L562.7 256l-89.4 89.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-112-112c-12.5-12.5-32.8-12.5-45.3 0zm-306.7 0c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l112 112c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256l89.4-89.4c12.5-12.5 12.5-32.8 0-45.3z",
                    ],
                    "iconName": "code",
                    "prefix": "fas",
                  }
                }
                text="Inspect listen"
              >
                <button
                  aria-label="Inspect listen"
                  data-target="#ListenPayloadModal"
                  data-toggle="modal"
                  disabled={false}
                  onClick={[Function]}
                  role="menuitem"
                  title="Inspect listen"
                  type="button"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          640,
                          512,
                          Array [],
                          "f121",
                          "M392.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm80.6 120.1c-12.5 12.5-12.5 32.8 0 45.3L562.7 256l-89.4 89.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-112-112c-12.5-12.5-32.8-12.5-45.3 0zm-306.7 0c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l112 112c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256l89.4-89.4c12.5-12.5 12.5-32.8 0-45.3z",
                        ],
                        "iconName": "code",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-code "
                      data-icon="code"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 640 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M392.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm80.6 120.1c-12.5 12.5-12.5 32.8 0 45.3L562.7 256l-89.4 89.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-112-112c-12.5-12.5-32.8-12.5-45.3 0zm-306.7 0c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l112 112c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256l89.4-89.4c12.5-12.5 12.5-32.8 0-45.3z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Inspect listen
                </button>
              </ListenControl>
            </ul>
            <button
              className="btn-transparent play-button"
              onClick={[Function]}
              title="Play"
              type="button"
            >
              <FontAwesomeIcon
                beat={false}
                beatFade={false}
                border={false}
                bounce={false}
                className=""
                fade={false}
                fixedWidth={false}
                flip={false}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [
                        61469,
                        "play-circle",
                      ],
                      "f144",
                      "M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c7.6-4.2 16.8-4.1 24.3 .5l144 88c7.1 4.4 11.5 12.1 11.5 20.5s-4.4 16.1-11.5 20.5l-144 88c-7.4 4.5-16.7 4.7-24.3 .5s-12.3-12.2-12.3-20.9V168c0-8.7 4.7-16.7 12.3-20.9z",
                    ],
                    "iconName": "circle-play",
                    "prefix": "far",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                maskId={null}
                pull={null}
                pulse={false}
                rotation={null}
                shake={false}
                size="2x"
                spin={false}
                spinPulse={false}
                spinReverse={false}
                swapOpacity={false}
                symbol={false}
                title=""
                titleId={null}
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-circle-play fa-2x "
                  data-icon="circle-play"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c7.6-4.2 16.8-4.1 24.3 .5l144 88c7.1 4.4 11.5 12.1 11.5 20.5s-4.4 16.1-11.5 20.5l-144 88c-7.4 4.5-16.7 4.7-24.3 .5s-12.3-12.2-12.3-20.9V168c0-8.7 4.7-16.7 12.3-20.9z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </button>
          </div>
        </div>
      </div>
    </div>
  </ForwardRef>
</ListenCard>
`;

exports[`ListenCard renders correctly for playing_now listen 1`] = `
<ListenCard
  listen={
    Object {
      "listened_at": 0,
      "playing_now": true,
      "track_metadata": Object {
        "additional_info": Object {
          "artist_mbids": Array [
            "xxxx",
          ],
          "duration_ms": 123000,
          "recording_mbid": "yyyy",
          "release_mbid": "foo",
        },
        "artist_name": "Moondog",
        "track_name": "Bird's Lament",
      },
      "user_name": "test",
    }
  }
  showTimestamp={true}
  showUsername={true}
>
  <ForwardRef
    className="listen-card   "
    onDoubleClick={[Function]}
  >
    <div
      className="card listen-card   "
      onDoubleClick={[Function]}
    >
      <div
        className="main-content"
      >
        <a
          className="listen-thumbnail"
          href="https://musicbrainz.org/release/foo/cover-art"
          rel="noopener noreferrer"
          target="_blank"
          title="Add cover art in MusicBrainz"
        >
          <div
            className="add-cover-art"
          >
            <img
              alt="Add cover art in MusicBrainz"
              src="/static/img/add-cover-art.svg"
            />
          </div>
        </a>
        <div
          className="listen-details"
        >
          <div
            className="title-duration"
          >
            <div
              className="ellipsis-2-lines"
              title="Bird's Lament"
            >
              <a
                href="https://musicbrainz.org/recording/yyyy"
                rel="noopener noreferrer"
                target="_blank"
              >
                Bird's Lament
              </a>
            </div>
            <div
              className="small text-muted"
              title="Duration"
            >
              2:03
            </div>
          </div>
          <div
            className="small text-muted ellipsis"
            title="Moondog"
          >
            <a
              href="https://musicbrainz.org/artist/xxxx"
              rel="noopener noreferrer"
              target="_blank"
            >
              Moondog
            </a>
          </div>
        </div>
        <div
          className="right-section"
        >
          <div
            className="username-and-timestamp"
          >
            <a
              href="/user/test"
              rel="noopener noreferrer"
              target="_blank"
              title="test"
            >
              test
            </a>
            <span
              className="listen-time"
            >
              <a
                href="/listening-now/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <FontAwesomeIcon
                  beat={false}
                  beatFade={false}
                  border={false}
                  bounce={false}
                  className=""
                  fade={false}
                  fixedWidth={false}
                  flip={false}
                  icon={
                    Object {
                      "icon": Array [
                        512,
                        512,
                        Array [
                          127925,
                        ],
                        "f001",
                        "M499.1 6.3c8.1 6 12.9 15.6 12.9 25.7v72V368c0 44.2-43 80-96 80s-96-35.8-96-80s43-80 96-80c11.2 0 22 1.6 32 4.6V147L192 223.8V432c0 44.2-43 80-96 80s-96-35.8-96-80s43-80 96-80c11.2 0 22 1.6 32 4.6V200 128c0-14.1 9.3-26.6 22.8-30.7l320-96c9.7-2.9 20.2-1.1 28.3 5z",
                      ],
                      "iconName": "music",
                      "prefix": "fas",
                    }
                  }
                  inverse={false}
                  listItem={false}
                  mask={null}
                  maskId={null}
                  pull={null}
                  pulse={false}
                  rotation={null}
                  shake={false}
                  size={null}
                  spin={false}
                  spinPulse={false}
                  spinReverse={false}
                  swapOpacity={false}
                  symbol={false}
                  title=""
                  titleId={null}
                  transform={null}
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-music "
                    data-icon="music"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M499.1 6.3c8.1 6 12.9 15.6 12.9 25.7v72V368c0 44.2-43 80-96 80s-96-35.8-96-80s43-80 96-80c11.2 0 22 1.6 32 4.6V147L192 223.8V432c0 44.2-43 80-96 80s-96-35.8-96-80s43-80 96-80c11.2 0 22 1.6 32 4.6V200 128c0-14.1 9.3-26.6 22.8-30.7l320-96c9.7-2.9 20.2-1.1 28.3 5z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </FontAwesomeIcon>
                 Listening now —
              </a>
            </span>
          </div>
          <div
            className="listen-controls"
          >
            <ListenFeedbackComponent
              listen={
                Object {
                  "listened_at": 0,
                  "playing_now": true,
                  "track_metadata": Object {
                    "additional_info": Object {
                      "artist_mbids": Array [
                        "xxxx",
                      ],
                      "duration_ms": 123000,
                      "recording_mbid": "yyyy",
                      "release_mbid": "foo",
                    },
                    "artist_name": "Moondog",
                    "track_name": "Bird's Lament",
                  },
                  "user_name": "test",
                }
              }
            >
              <FontAwesomeIcon
                beat={false}
                beatFade={false}
                border={false}
                className=" loved"
                fixedWidth={false}
                flip={false}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [
                        128153,
                        128154,
                        128155,
                        128156,
                        128420,
                        129293,
                        129294,
                        129505,
                        9829,
                        10084,
                        61578,
                      ],
                      "f004",
                      "M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z",
                    ],
                    "iconName": "heart",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                maskId={null}
                onClick={[Function]}
                pull={null}
                pulse={false}
                rotation={null}
                shake={false}
                size={null}
                spin={false}
                spinPulse={false}
                spinReverse={false}
                swapOpacity={false}
                symbol={false}
                title="Love"
                titleId={null}
                transform={null}
              >
                <svg
                  aria-labelledby="svg-inline--fa-title-000000000000"
                  className="svg-inline--fa fa-heart fa-w-16  loved"
                  data-icon="heart"
                  data-prefix="fas"
                  onClick={[Function]}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="svg-inline--fa-title-000000000000"
                    style={Object {}}
                  >
                    Love
                  </title>
                  <path
                    d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
              <FontAwesomeIcon
                beat={false}
                beatFade={false}
                border={false}
                bounce={false}
                className=""
                fade={false}
                fixedWidth={false}
                flip={false}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [
                        128148,
                        "heart-broken",
                      ],
                      "f7a9",
                      "M119.4 44.1c23.3-3.9 46.8-1.9 68.6 5.3l49.8 77.5-75.4 75.4c-1.5 1.5-2.4 3.6-2.3 5.8s1 4.2 2.6 5.7l112 104c2.9 2.7 7.4 2.9 10.5 .3s3.8-7 1.7-10.4l-60.4-98.1 90.7-75.6c2.6-2.1 3.5-5.7 2.4-8.8L296.8 61.8c28.5-16.7 62.4-23.2 95.7-17.6C461.5 55.6 512 115.2 512 185.1v5.8c0 41.5-17.2 81.2-47.6 109.5L283.7 469.1c-7.5 7-17.4 10.9-27.7 10.9s-20.2-3.9-27.7-10.9L47.6 300.4C17.2 272.1 0 232.4 0 190.9v-5.8c0-69.9 50.5-129.5 119.4-141z",
                    ],
                    "iconName": "heart-crack",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                maskId={null}
                onClick={[Function]}
                pull={null}
                pulse={false}
                rotation={null}
                shake={false}
                size={null}
                spin={false}
                spinPulse={false}
                spinReverse={false}
                swapOpacity={false}
                symbol={false}
                title="Hate"
                titleId={null}
                transform={null}
              >
                <svg
                  aria-labelledby="svg-inline--fa-title-000000000000"
                  className="svg-inline--fa fa-heart-crack "
                  data-icon="heart-crack"
                  data-prefix="fas"
                  onClick={[Function]}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="svg-inline--fa-title-000000000000"
                    style={Object {}}
                  >
                    Hate
                  </title>
                  <path
                    d="M119.4 44.1c23.3-3.9 46.8-1.9 68.6 5.3l49.8 77.5-75.4 75.4c-1.5 1.5-2.4 3.6-2.3 5.8s1 4.2 2.6 5.7l112 104c2.9 2.7 7.4 2.9 10.5 .3s3.8-7 1.7-10.4l-60.4-98.1 90.7-75.6c2.6-2.1 3.5-5.7 2.4-8.8L296.8 61.8c28.5-16.7 62.4-23.2 95.7-17.6C461.5 55.6 512 115.2 512 185.1v5.8c0 41.5-17.2 81.2-47.6 109.5L283.7 469.1c-7.5 7-17.4 10.9-27.7 10.9s-20.2-3.9-27.7-10.9L47.6 300.4C17.2 272.1 0 232.4 0 190.9v-5.8c0-69.9 50.5-129.5 119.4-141z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </ListenFeedbackComponent>
            <FontAwesomeIcon
              aria-expanded="true"
              aria-haspopup="true"
              beat={false}
              beatFade={false}
              border={false}
              bounce={false}
              className="dropdown-toggle"
              data-toggle="dropdown"
              fade={false}
              fixedWidth={false}
              flip={false}
              icon={
                Object {
                  "icon": Array [
                    128,
                    512,
                    Array [
                      "ellipsis-v",
                    ],
                    "f142",
                    "M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z",
                  ],
                  "iconName": "ellipsis-vertical",
                  "prefix": "fas",
                }
              }
              id="listenControlsDropdown"
              inverse={false}
              listItem={false}
              mask={null}
              maskId={null}
              pull={null}
              pulse={false}
              rotation={null}
              shake={false}
              size={null}
              spin={false}
              spinPulse={false}
              spinReverse={false}
              swapOpacity={false}
              symbol={false}
              title="More actions"
              titleId={null}
              transform={null}
            >
              <svg
                aria-expanded="true"
                aria-haspopup="true"
                aria-labelledby="svg-inline--fa-title-000000000000"
                className="svg-inline--fa fa-ellipsis-vertical dropdown-toggle"
                data-icon="ellipsis-vertical"
                data-prefix="fas"
                data-toggle="dropdown"
                id="listenControlsDropdown"
                role="img"
                style={Object {}}
                viewBox="0 0 128 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-000000000000"
                  style={Object {}}
                >
                  More actions
                </title>
                <path
                  d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
            <ul
              aria-labelledby="listenControlsDropdown"
              className="dropdown-menu dropdown-menu-right"
            >
              <ListenControl
                anchorTagAttributes={
                  Object {
                    "rel": "noopener noreferrer",
                    "target": "_blank",
                  }
                }
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [
                        "external-link-alt",
                      ],
                      "f35d",
                      "M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V32c0-17.7-14.3-32-32-32H352zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z",
                    ],
                    "iconName": "up-right-from-square",
                    "prefix": "fas",
                  }
                }
                link="https://musicbrainz.org/recording/yyyy"
                text="Open in MusicBrainz"
                title="Open in MusicBrainz"
              >
                <a
                  aria-label="Open in MusicBrainz"
                  href="https://musicbrainz.org/recording/yyyy"
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Open in MusicBrainz"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [
                            "external-link-alt",
                          ],
                          "f35d",
                          "M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V32c0-17.7-14.3-32-32-32H352zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z",
                        ],
                        "iconName": "up-right-from-square",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-up-right-from-square "
                      data-icon="up-right-from-square"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V32c0-17.7-14.3-32-32-32H352zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Open in MusicBrainz
                </a>
              </ListenControl>
              <ListenControl
                action={[Function]}
                dataTarget="#PinRecordingModal"
                dataToggle="modal"
                icon={
                  Object {
                    "icon": Array [
                      384,
                      512,
                      Array [
                        128204,
                        128392,
                        "thumb-tack",
                      ],
                      "f08d",
                      "M32 32C32 14.3 46.3 0 64 0H320c17.7 0 32 14.3 32 32s-14.3 32-32 32H290.5l11.4 148.2c36.7 19.9 65.7 53.2 79.5 94.7l1 3c3.3 9.8 1.6 20.5-4.4 28.8s-15.7 13.3-26 13.3H32c-10.3 0-19.9-4.9-26-13.3s-7.7-19.1-4.4-28.8l1-3c13.8-41.5 42.8-74.8 79.5-94.7L93.5 64H64C46.3 64 32 49.7 32 32zM160 384h64v96c0 17.7-14.3 32-32 32s-32-14.3-32-32V384z",
                    ],
                    "iconName": "thumbtack",
                    "prefix": "fas",
                  }
                }
                text="Pin this track"
              >
                <button
                  aria-label="Pin this track"
                  data-target="#PinRecordingModal"
                  data-toggle="modal"
                  disabled={false}
                  onClick={[Function]}
                  role="menuitem"
                  title="Pin this track"
                  type="button"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          384,
                          512,
                          Array [
                            128204,
                            128392,
                            "thumb-tack",
                          ],
                          "f08d",
                          "M32 32C32 14.3 46.3 0 64 0H320c17.7 0 32 14.3 32 32s-14.3 32-32 32H290.5l11.4 148.2c36.7 19.9 65.7 53.2 79.5 94.7l1 3c3.3 9.8 1.6 20.5-4.4 28.8s-15.7 13.3-26 13.3H32c-10.3 0-19.9-4.9-26-13.3s-7.7-19.1-4.4-28.8l1-3c13.8-41.5 42.8-74.8 79.5-94.7L93.5 64H64C46.3 64 32 49.7 32 32zM160 384h64v96c0 17.7-14.3 32-32 32s-32-14.3-32-32V384z",
                        ],
                        "iconName": "thumbtack",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-thumbtack "
                      data-icon="thumbtack"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 384 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M32 32C32 14.3 46.3 0 64 0H320c17.7 0 32 14.3 32 32s-14.3 32-32 32H290.5l11.4 148.2c36.7 19.9 65.7 53.2 79.5 94.7l1 3c3.3 9.8 1.6 20.5-4.4 28.8s-15.7 13.3-26 13.3H32c-10.3 0-19.9-4.9-26-13.3s-7.7-19.1-4.4-28.8l1-3c13.8-41.5 42.8-74.8 79.5-94.7L93.5 64H64C46.3 64 32 49.7 32 32zM160 384h64v96c0 17.7-14.3 32-32 32s-32-14.3-32-32V384z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Pin this track
                </button>
              </ListenControl>
              <ListenControl
                action={[Function]}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [
                        128172,
                        62075,
                        "commenting",
                      ],
                      "f4ad",
                      "M256 448c141.4 0 256-93.1 256-208S397.4 32 256 32S0 125.1 0 240c0 45.1 17.7 86.8 47.7 120.9c-1.9 24.5-11.4 46.3-21.4 62.9c-5.5 9.2-11.1 16.6-15.2 21.6c-2.1 2.5-3.7 4.4-4.9 5.7c-.6 .6-1 1.1-1.3 1.4l-.3 .3 0 0 0 0 0 0 0 0c-4.6 4.6-5.9 11.4-3.4 17.4c2.5 6 8.3 9.9 14.8 9.9c28.7 0 57.6-8.9 81.6-19.3c22.9-10 42.4-21.9 54.3-30.6c31.8 11.5 67 17.9 104.1 17.9zM128 208a32 32 0 1 1 0 64 32 32 0 1 1 0-64zm128 0a32 32 0 1 1 0 64 32 32 0 1 1 0-64zm96 32a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z",
                    ],
                    "iconName": "comment-dots",
                    "prefix": "fas",
                  }
                }
                text="Recommend to my followers"
                title="Recommend to my followers"
              >
                <button
                  aria-label="Recommend to my followers"
                  disabled={false}
                  onClick={[Function]}
                  role="menuitem"
                  title="Recommend to my followers"
                  type="button"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [
                            128172,
                            62075,
                            "commenting",
                          ],
                          "f4ad",
                          "M256 448c141.4 0 256-93.1 256-208S397.4 32 256 32S0 125.1 0 240c0 45.1 17.7 86.8 47.7 120.9c-1.9 24.5-11.4 46.3-21.4 62.9c-5.5 9.2-11.1 16.6-15.2 21.6c-2.1 2.5-3.7 4.4-4.9 5.7c-.6 .6-1 1.1-1.3 1.4l-.3 .3 0 0 0 0 0 0 0 0c-4.6 4.6-5.9 11.4-3.4 17.4c2.5 6 8.3 9.9 14.8 9.9c28.7 0 57.6-8.9 81.6-19.3c22.9-10 42.4-21.9 54.3-30.6c31.8 11.5 67 17.9 104.1 17.9zM128 208a32 32 0 1 1 0 64 32 32 0 1 1 0-64zm128 0a32 32 0 1 1 0 64 32 32 0 1 1 0-64zm96 32a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z",
                        ],
                        "iconName": "comment-dots",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-comment-dots "
                      data-icon="comment-dots"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 448c141.4 0 256-93.1 256-208S397.4 32 256 32S0 125.1 0 240c0 45.1 17.7 86.8 47.7 120.9c-1.9 24.5-11.4 46.3-21.4 62.9c-5.5 9.2-11.1 16.6-15.2 21.6c-2.1 2.5-3.7 4.4-4.9 5.7c-.6 .6-1 1.1-1.3 1.4l-.3 .3 0 0 0 0 0 0 0 0c-4.6 4.6-5.9 11.4-3.4 17.4c2.5 6 8.3 9.9 14.8 9.9c28.7 0 57.6-8.9 81.6-19.3c22.9-10 42.4-21.9 54.3-30.6c31.8 11.5 67 17.9 104.1 17.9zM128 208a32 32 0 1 1 0 64 32 32 0 1 1 0-64zm128 0a32 32 0 1 1 0 64 32 32 0 1 1 0-64zm96 32a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Recommend to my followers
                </button>
              </ListenControl>
              <ListenControl
                action={[Function]}
                dataTarget="#PersonalRecommendationModal"
                dataToggle="modal"
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [
                        61913,
                      ],
                      "f1d8",
                      "M498.1 5.6c10.1 7 15.4 19.1 13.5 31.2l-64 416c-1.5 9.7-7.4 18.2-16 23s-18.9 5.4-28 1.6L284 427.7l-68.5 74.1c-8.9 9.7-22.9 12.9-35.2 8.1S160 493.2 160 480V396.4c0-4 1.5-7.8 4.2-10.7L331.8 202.8c5.8-6.3 5.6-16-.4-22s-15.7-6.4-22-.7L106 360.8 17.7 316.6C7.1 311.3 .3 300.7 0 288.9s5.9-22.8 16.1-28.7l448-256c10.7-6.1 23.9-5.5 34 1.4z",
                    ],
                    "iconName": "paper-plane",
                    "prefix": "fas",
                  }
                }
                text="Personally recommend"
              >
                <button
                  aria-label="Personally recommend"
                  data-target="#PersonalRecommendationModal"
                  data-toggle="modal"
                  disabled={false}
                  onClick={[Function]}
                  role="menuitem"
                  title="Personally recommend"
                  type="button"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [
                            61913,
                          ],
                          "f1d8",
                          "M498.1 5.6c10.1 7 15.4 19.1 13.5 31.2l-64 416c-1.5 9.7-7.4 18.2-16 23s-18.9 5.4-28 1.6L284 427.7l-68.5 74.1c-8.9 9.7-22.9 12.9-35.2 8.1S160 493.2 160 480V396.4c0-4 1.5-7.8 4.2-10.7L331.8 202.8c5.8-6.3 5.6-16-.4-22s-15.7-6.4-22-.7L106 360.8 17.7 316.6C7.1 311.3 .3 300.7 0 288.9s5.9-22.8 16.1-28.7l448-256c10.7-6.1 23.9-5.5 34 1.4z",
                        ],
                        "iconName": "paper-plane",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-paper-plane "
                      data-icon="paper-plane"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M498.1 5.6c10.1 7 15.4 19.1 13.5 31.2l-64 416c-1.5 9.7-7.4 18.2-16 23s-18.9 5.4-28 1.6L284 427.7l-68.5 74.1c-8.9 9.7-22.9 12.9-35.2 8.1S160 493.2 160 480V396.4c0-4 1.5-7.8 4.2-10.7L331.8 202.8c5.8-6.3 5.6-16-.4-22s-15.7-6.4-22-.7L106 360.8 17.7 316.6C7.1 311.3 .3 300.7 0 288.9s5.9-22.8 16.1-28.7l448-256c10.7-6.1 23.9-5.5 34 1.4z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Personally recommend
                </button>
              </ListenControl>
              <ListenControl
                action={[Function]}
                dataTarget="#CBReviewModal"
                dataToggle="modal"
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [
                        9999,
                        61504,
                        "pencil-alt",
                      ],
                      "f303",
                      "M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z",
                    ],
                    "iconName": "pencil",
                    "prefix": "fas",
                  }
                }
                text="Write a review"
              >
                <button
                  aria-label="Write a review"
                  data-target="#CBReviewModal"
                  data-toggle="modal"
                  disabled={false}
                  onClick={[Function]}
                  role="menuitem"
                  title="Write a review"
                  type="button"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [
                            9999,
                            61504,
                            "pencil-alt",
                          ],
                          "f303",
                          "M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z",
                        ],
                        "iconName": "pencil",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-pencil "
                      data-icon="pencil"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Write a review
                </button>
              </ListenControl>
              <ListenControl
                action={[Function]}
                dataTarget="#ListenPayloadModal"
                dataToggle="modal"
                icon={
                  Object {
                    "icon": Array [
                      640,
                      512,
                      Array [],
                      "f121",
                      "M392.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm80.6 120.1c-12.5 12.5-12.5 32.8 0 45.3L562.7 256l-89.4 89.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-112-112c-12.5-12.5-32.8-12.5-45.3 0zm-306.7 0c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l112 112c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256l89.4-89.4c12.5-12.5 12.5-32.8 0-45.3z",
                    ],
                    "iconName": "code",
                    "prefix": "fas",
                  }
                }
                text="Inspect listen"
              >
                <button
                  aria-label="Inspect listen"
                  data-target="#ListenPayloadModal"
                  data-toggle="modal"
                  disabled={false}
                  onClick={[Function]}
                  role="menuitem"
                  title="Inspect listen"
                  type="button"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          640,
                          512,
                          Array [],
                          "f121",
                          "M392.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm80.6 120.1c-12.5 12.5-12.5 32.8 0 45.3L562.7 256l-89.4 89.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-112-112c-12.5-12.5-32.8-12.5-45.3 0zm-306.7 0c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l112 112c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256l89.4-89.4c12.5-12.5 12.5-32.8 0-45.3z",
                        ],
                        "iconName": "code",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-code "
                      data-icon="code"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 640 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M392.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm80.6 120.1c-12.5 12.5-12.5 32.8 0 45.3L562.7 256l-89.4 89.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-112-112c-12.5-12.5-32.8-12.5-45.3 0zm-306.7 0c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l112 112c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256l89.4-89.4c12.5-12.5 12.5-32.8 0-45.3z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Inspect listen
                </button>
              </ListenControl>
            </ul>
            <button
              className="btn-transparent play-button"
              onClick={[Function]}
              title="Play"
              type="button"
            >
              <FontAwesomeIcon
                beat={false}
                beatFade={false}
                border={false}
                bounce={false}
                className=""
                fade={false}
                fixedWidth={false}
                flip={false}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [
                        61469,
                        "play-circle",
                      ],
                      "f144",
                      "M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c7.6-4.2 16.8-4.1 24.3 .5l144 88c7.1 4.4 11.5 12.1 11.5 20.5s-4.4 16.1-11.5 20.5l-144 88c-7.4 4.5-16.7 4.7-24.3 .5s-12.3-12.2-12.3-20.9V168c0-8.7 4.7-16.7 12.3-20.9z",
                    ],
                    "iconName": "circle-play",
                    "prefix": "far",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                maskId={null}
                pull={null}
                pulse={false}
                rotation={null}
                shake={false}
                size="2x"
                spin={false}
                spinPulse={false}
                spinReverse={false}
                swapOpacity={false}
                symbol={false}
                title=""
                titleId={null}
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-circle-play fa-2x "
                  data-icon="circle-play"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c7.6-4.2 16.8-4.1 24.3 .5l144 88c7.1 4.4 11.5 12.1 11.5 20.5s-4.4 16.1-11.5 20.5l-144 88c-7.4 4.5-16.7 4.7-24.3 .5s-12.3-12.2-12.3-20.9V168c0-8.7 4.7-16.7 12.3-20.9z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </button>
          </div>
        </div>
      </div>
    </div>
  </ForwardRef>
</ListenCard>
`;

exports[`ListenCard should render timestamp using preciseTimestamp 1`] = `
<ListenCard
  listen={
    Object {
      "listened_at": 0,
      "playing_now": false,
      "track_metadata": Object {
        "additional_info": Object {
          "artist_mbids": Array [
            "xxxx",
          ],
          "duration_ms": 123000,
          "recording_mbid": "yyyy",
          "recording_msid": "bar",
          "release_mbid": "foo",
        },
        "artist_name": "Moondog",
        "track_name": "Bird's Lament",
      },
      "user_name": "test",
    }
  }
  showTimestamp={true}
  showUsername={true}
>
  <ForwardRef
    className="listen-card   "
    onDoubleClick={[Function]}
  >
    <div
      className="card listen-card   "
      onDoubleClick={[Function]}
    >
      <div
        className="main-content"
      >
        <a
          className="listen-thumbnail"
          href="https://musicbrainz.org/release/foo/cover-art"
          rel="noopener noreferrer"
          target="_blank"
          title="Add cover art in MusicBrainz"
        >
          <div
            className="add-cover-art"
          >
            <img
              alt="Add cover art in MusicBrainz"
              src="/static/img/add-cover-art.svg"
            />
          </div>
        </a>
        <div
          className="listen-details"
        >
          <div
            className="title-duration"
          >
            <div
              className="ellipsis-2-lines"
              title="Bird's Lament"
            >
              <a
                href="https://musicbrainz.org/recording/yyyy"
                rel="noopener noreferrer"
                target="_blank"
              >
                Bird's Lament
              </a>
            </div>
            <div
              className="small text-muted"
              title="Duration"
            >
              2:03
            </div>
          </div>
          <div
            className="small text-muted ellipsis"
            title="Moondog"
          >
            <a
              href="https://musicbrainz.org/artist/xxxx"
              rel="noopener noreferrer"
              target="_blank"
            >
              Moondog
            </a>
          </div>
        </div>
        <div
          className="right-section"
        >
          <div
            className="username-and-timestamp"
          >
            <a
              href="/user/test"
              rel="noopener noreferrer"
              target="_blank"
              title="test"
            >
              test
            </a>
            <span
              className="listen-time"
              title=""
            >
              Jan 01, 1970, 1:00 AM
            </span>
          </div>
          <div
            className="listen-controls"
          >
            <FontAwesomeIcon
              aria-expanded="true"
              aria-haspopup="true"
              beat={false}
              beatFade={false}
              border={false}
              bounce={false}
              className="dropdown-toggle"
              data-toggle="dropdown"
              fade={false}
              fixedWidth={false}
              flip={false}
              icon={
                Object {
                  "icon": Array [
                    128,
                    512,
                    Array [
                      "ellipsis-v",
                    ],
                    "f142",
                    "M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z",
                  ],
                  "iconName": "ellipsis-vertical",
                  "prefix": "fas",
                }
              }
              id="listenControlsDropdown"
              inverse={false}
              listItem={false}
              mask={null}
              maskId={null}
              pull={null}
              pulse={false}
              rotation={null}
              shake={false}
              size={null}
              spin={false}
              spinPulse={false}
              spinReverse={false}
              swapOpacity={false}
              symbol={false}
              title="More actions"
              titleId={null}
              transform={null}
            >
              <svg
                aria-expanded="true"
                aria-haspopup="true"
                aria-labelledby="svg-inline--fa-title-000000000000"
                className="svg-inline--fa fa-ellipsis-vertical dropdown-toggle"
                data-icon="ellipsis-vertical"
                data-prefix="fas"
                data-toggle="dropdown"
                id="listenControlsDropdown"
                role="img"
                style={Object {}}
                viewBox="0 0 128 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-000000000000"
                  style={Object {}}
                >
                  More actions
                </title>
                <path
                  d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
            <ul
              aria-labelledby="listenControlsDropdown"
              className="dropdown-menu dropdown-menu-right"
            >
              <ListenControl
                anchorTagAttributes={
                  Object {
                    "rel": "noopener noreferrer",
                    "target": "_blank",
                  }
                }
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [
                        "external-link-alt",
                      ],
                      "f35d",
                      "M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V32c0-17.7-14.3-32-32-32H352zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z",
                    ],
                    "iconName": "up-right-from-square",
                    "prefix": "fas",
                  }
                }
                link="https://musicbrainz.org/recording/yyyy"
                text="Open in MusicBrainz"
                title="Open in MusicBrainz"
              >
                <a
                  aria-label="Open in MusicBrainz"
                  href="https://musicbrainz.org/recording/yyyy"
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Open in MusicBrainz"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [
                            "external-link-alt",
                          ],
                          "f35d",
                          "M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V32c0-17.7-14.3-32-32-32H352zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z",
                        ],
                        "iconName": "up-right-from-square",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-up-right-from-square "
                      data-icon="up-right-from-square"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V32c0-17.7-14.3-32-32-32H352zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Open in MusicBrainz
                </a>
              </ListenControl>
              <ListenControl
                action={[Function]}
                dataTarget="#ListenPayloadModal"
                dataToggle="modal"
                icon={
                  Object {
                    "icon": Array [
                      640,
                      512,
                      Array [],
                      "f121",
                      "M392.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm80.6 120.1c-12.5 12.5-12.5 32.8 0 45.3L562.7 256l-89.4 89.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-112-112c-12.5-12.5-32.8-12.5-45.3 0zm-306.7 0c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l112 112c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256l89.4-89.4c12.5-12.5 12.5-32.8 0-45.3z",
                    ],
                    "iconName": "code",
                    "prefix": "fas",
                  }
                }
                text="Inspect listen"
              >
                <button
                  aria-label="Inspect listen"
                  data-target="#ListenPayloadModal"
                  data-toggle="modal"
                  disabled={false}
                  onClick={[Function]}
                  role="menuitem"
                  title="Inspect listen"
                  type="button"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          640,
                          512,
                          Array [],
                          "f121",
                          "M392.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm80.6 120.1c-12.5 12.5-12.5 32.8 0 45.3L562.7 256l-89.4 89.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-112-112c-12.5-12.5-32.8-12.5-45.3 0zm-306.7 0c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l112 112c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256l89.4-89.4c12.5-12.5 12.5-32.8 0-45.3z",
                        ],
                        "iconName": "code",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-code "
                      data-icon="code"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 640 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M392.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm80.6 120.1c-12.5 12.5-12.5 32.8 0 45.3L562.7 256l-89.4 89.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-112-112c-12.5-12.5-32.8-12.5-45.3 0zm-306.7 0c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l112 112c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256l89.4-89.4c12.5-12.5 12.5-32.8 0-45.3z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Inspect listen
                </button>
              </ListenControl>
            </ul>
            <button
              className="btn-transparent play-button"
              onClick={[Function]}
              title="Play"
              type="button"
            >
              <FontAwesomeIcon
                beat={false}
                beatFade={false}
                border={false}
                bounce={false}
                className=""
                fade={false}
                fixedWidth={false}
                flip={false}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [
                        61469,
                        "play-circle",
                      ],
                      "f144",
                      "M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c7.6-4.2 16.8-4.1 24.3 .5l144 88c7.1 4.4 11.5 12.1 11.5 20.5s-4.4 16.1-11.5 20.5l-144 88c-7.4 4.5-16.7 4.7-24.3 .5s-12.3-12.2-12.3-20.9V168c0-8.7 4.7-16.7 12.3-20.9z",
                    ],
                    "iconName": "circle-play",
                    "prefix": "far",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                maskId={null}
                pull={null}
                pulse={false}
                rotation={null}
                shake={false}
                size="2x"
                spin={false}
                spinPulse={false}
                spinReverse={false}
                swapOpacity={false}
                symbol={false}
                title=""
                titleId={null}
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-circle-play fa-2x "
                  data-icon="circle-play"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c7.6-4.2 16.8-4.1 24.3 .5l144 88c7.1 4.4 11.5 12.1 11.5 20.5s-4.4 16.1-11.5 20.5l-144 88c-7.4 4.5-16.7 4.7-24.3 .5s-12.3-12.2-12.3-20.9V168c0-8.7 4.7-16.7 12.3-20.9z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </button>
          </div>
        </div>
      </div>
    </div>
  </ForwardRef>
</ListenCard>
`;
